--- a/yaml/Openclash-Smart-6.20.yaml
+++ b/yaml/Openclash-Smart-6.20.yaml
@@ -4,9 +4,9 @@
 # openclash设置和配置教程: https://www.youtube.com/watch?v=S2l_0g4EOHk&t
 # sub-store设置和配置教程: https://www.youtube.com/watch?v=bqEFhWHG0dg
 # 注意规则在满足自己需求情况下，尽量做到精简，不要过度复杂，以免影响性能。
-# ⭐️⭐️如果遇到无法识别smart策略组则，需要更新openclash内核才能使用此配置。SSH连接OpenWrt后，输入下方内容(一定要删掉#   #后面有空格)，然后手动更新。注意手动更新后，，不要在openclash再次更新内核。
+# ⭐️⭐️如果遇到无法识别smart策略组则，需要更新openclash内核才能使用此配置。SSH连接OpenWrt后，输入下方内容(一定要删掉#   #后面有空格)，然后手动更新。注意手动更新后，，不要在openclash再次更新内核。
 # wget -O smartcore.sh --no-check-certificate https://github.com/666OS/YYDS/raw/main/JS/smartcore.sh && chmod +x smartcore.sh && ./smartcore.sh
-# ⭐️⭐️smart策略组必须要需要模型，下载下方链接内Model.bin（打开链接往下拉能看到）文件放到OpenClash: (/etc/openclash/Model.bin)，如果不想用模型：uselightgbm: true,collectdata: true,  智能策略组的这两个参数改成false
+# ⭐️⭐️smart策略组必须要需要模型，下载下方链接内Model.bin（打开链接往下拉能看到）文件放到OpenClash: (/etc/openclash/Model.bin)，如果不想用模型：uselightgbm: true,collectdata: true,  智能策略组的这两个参数改成false
 # https://github.com/vernesong/mihomo/releases
 
 # 机场订阅
@@ -120,12 +120,12 @@ dns:
     - +.dler.cloud
     - +.0tk8a3a1q4t94dler.com
     - +.aerianas.top
-    - '*.lan'             # 局域网设备（如 router.lan）
-    - '*.local'           # mDNS 服务（如 printer.local）
-    - 'time.*.com'        # 时间服务器（如 time.apple.com）
-    - '*.steamcontent.com' # Steam 更新域名
-    - '*.nflxvideo.net'   # Netflix CDN
-    - '*.bt-tracker.*'    # BT Tracker 服务器
+    - '*.lan'               # 局域网设备（如 router.lan）
+    - '*.local'             # mDNS 服务（如 printer.local）
+    - 'time.*.com'          # 时间服务器（如 time.apple.com）
+    - '*.steamcontent.com'  # Steam 更新域名
+    - '*.nflxvideo.net'     # Netflix CDN
+    - '*.bt-tracker.*'      # BT Tracker 服务器
     - 'localhost'
     - '*.msftconnecttest.com' # Windows 网络检测
     - '*.miwifi.com'
@@ -147,14 +147,14 @@ profile:
 
 # 出站策略
 # 注意锚点必须放在引用的上方，可以集中把锚点全部放yaml的顶部。
-pr: &pr {type: select, proxies: [🚀 默认代理, ♻️ 香港自动, ♻️ 日本自动, ♻️ 美国自动, ♻️ 新国自动, ♻️ 韩国自动, ♻️ 台湾自动, ♻️ 欧洲自动, ♻️ 自动选择, ⭐ 香港智能, ⭐ 日本智能, ⭐ 美国智能, ⭐ 新国智能, ⭐ 韩国智能, ⭐ 台湾智能, ⭐ 欧洲智能, 🔒 港区-稳定IP, 🔒 日本-稳定IP, 🔒 美国-稳定IP, 🔒 新国-稳定IP, 🔒 韩国-稳定IP, 🔒 台湾-稳定IP, 🔒 欧洲-稳定IP, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇸🇬 新国节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 🇹🇼 台湾节点, 🌍 欧洲节点, 🔯 香港故转, 🔯 日本故转, 🔯 美国故转, 🔯 新国故转, 🔯 韩国故转, 🔯 台湾故转, 🔯 欧洲故转, 🌍 其他节点, 🌐 全部节点, 直连]}
-pr_b: &pr_b {type: select, proxies: [♻️ 香港自动, ♻️ 日本自动, ♻️ 美国自动, ♻️ 新国自动, ♻️ 韩国自动, ♻️ 台湾自动, ♻️ 欧洲自动, ♻️ 自动选择, ⭐ 香港智能, ⭐ 日本智能, ⭐ 美国智能, ⭐ 新国智能, ⭐ 韩国智能, ⭐ 台湾智能, ⭐ 欧洲智能, 🔒 港区-稳定IP, 🔒 日本-稳定IP, 🔒 美国-稳定IP, 🔒 新国-稳定IP, 🔒 韩国-稳定IP, 🔒 台湾-稳定IP, 🔒 欧洲-稳定IP, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇸🇬 新国节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 🇹🇼 台湾节点, 🌍 欧洲节点, 🔯 香港故转, 🔯 日本故转, 🔯 美国故转, 🔯 新国故转, 🔯 韩国故转, 🔯 台湾故转, 🔯 欧洲故转, 🌍 其他节点, 🌐 全部节点, 直连]}
-pr_c: &pr_c {type: select, proxies: [直连, ♻️ 香港自动, ♻️ 日本自动, ♻️ 美国自动, ♻️ 新国自动, ♻️ 韩国自动, ♻️ 台湾自动, ♻️ 欧洲自动, ♻️ 自动选择, ⭐ 香港智能, ⭐ 日本智能, ⭐ 美国智能, ⭐ 新国智能, ⭐ 韩国智能, ⭐ 台湾智能, ⭐ 欧洲智能, 🔒 港区-稳定IP, 🔒 日本-稳定IP, 🔒 美国-稳定IP, 🔒 新国-稳定IP, 🔒 韩国-稳定IP, 🔒 台湾-稳定IP, 🔒 欧洲-稳定IP, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇸🇬 新国节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 🇹🇼 台湾节点, 🌍 欧洲节点, 🔯 香港故转, 🔯 日本故转, 🔯 美国故转, 🔯 新国故转, 🔯 韩国故转, 🔯 台湾故转, 🔯 欧洲故转, 🌍 其他节点, 🌐 全部节点]}
+pr: &pr {type: select, proxies: [🚀 默认代理, ♻️ 香港自动, ♻️ 日本自动, ♻️ 美国自动, ♻️ 新国自动, ♻️ 韩国自动, ♻️ 台湾自动, ♻️ 欧洲自动, ♻️ 自动选择, ⭐ 香港智能, ⭐ 日本智能, ⭐ 美国智能, ⭐ 新国智能, ⭐ 韩国智能, ⭐ 台湾智能, ⭐ 欧洲智能, 🔒 港区-稳定IP, 🔒 日本-稳定IP, 🔒 美国-稳定IP, 🔒 新国-稳定IP, 🔒 韩国-稳定IP, 🔒 台湾-稳定IP, 🔒 欧洲-稳定IP, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇸🇬 新国节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 🇹🇼 台湾节点, 🇩🇪🇫🇷🇬🇧 欧洲节点, 🔯 香港故转, 🔯 日本故转, 🔯 美国故转, 🔯 新国故转, 🔯 韩国故转, 🔯 台湾故转, 🔯 欧洲故转, 🌍 其他节点, 自建/家宽节点, 🌐 全部节点, 直连]}
+pr_b: &pr_b {type: select, proxies: [♻️ 香港自动, ♻️ 日本自动, ♻️ 美国自动, ♻️ 新国自动, ♻️ 韩国自动, ♻️ 台湾自动, ♻️ 欧洲自动, ♻️ 自动选择, ⭐ 香港智能, ⭐ 日本智能, ⭐ 美国智能, ⭐ 新国智能, ⭐ 韩国智能, ⭐ 台湾智能, ⭐ 欧洲智能, 🔒 港区-稳定IP, 🔒 日本-稳定IP, 🔒 美国-稳定IP, 🔒 新国-稳定IP, 🔒 韩国-稳定IP, 🔒 台湾-稳定IP, 🔒 欧洲-稳定IP, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇸🇬 新国节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 🇹🇼 台湾节点, 🇩🇪🇫🇷🇬🇧 欧洲节点, 🔯 香港故转, 🔯 日本故转, 🔯 美国故转, 🔯 新国故转, 🔯 韩国故转, 🔯 台湾故转, 🔯 欧洲故转, 🌍 其他节点, 自建/家宽节点, 🌐 全部节点, 直连]}
+pr_c: &pr_c {type: select, proxies: [直连, ♻️ 香港自动, ♻️ 日本自动, ♻️ 美国自动, ♻️ 新国自动, ♻️ 韩国自动, ♻️ 台湾自动, ♻️ 欧洲自动, ♻️ 自动选择, ⭐ 香港智能, ⭐ 日本智能, ⭐ 美国智能, ⭐ 新国智能, ⭐ 韩国智能, ⭐ 台湾智能, ⭐ 欧洲智能, 🔒 港区-稳定IP, 🔒 日本-稳定IP, 🔒 美国-稳定IP, 🔒 新国-稳定IP, 🔒 韩国-稳定IP, 🔒 台湾-稳定IP, 🔒 欧洲-稳定IP, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇸🇬 新国节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 🇹🇼 台湾节点, 🇩🇪🇫🇷🇬🇧 欧洲节点, 🔯 香港故转, 🔯 日本故转, 🔯 美国故转, 🔯 新国故转, 🔯 韩国故转, 🔯 台湾故转, 🔯 欧洲故转, 🌍 其他节点, 自建/家宽节点, 🌐 全部节点]}
 
 proxy-groups:
   - {name: 🚀 默认代理, <<: *pr_b}
-  - {name: 🤖 Ai, type: select, include-all: true, proxies: [🚀 默认代理, ♻️ 香港自动, ♻️ 日本自动, ♻️ 美国自动, ♻️ 新国自动, ♻️ 韩国自动, ♻️ 台湾自动, ♻️ 欧洲自动, ♻️ 自动选择, ⭐ 香港智能, ⭐ 日本智能, ⭐ 美国智能, ⭐ 新国智能, ⭐ 韩国智能, ⭐ 台湾智能, ⭐ 欧洲智能, 🔒 港区-稳定IP, 🔒 日本-稳定IP, 🔒 美国-稳定IP, 🔒 新国-稳定IP, 🔒 韩国-稳定IP, 🔒 台湾-稳定IP, 🔒 欧洲-稳定IP, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇸🇬 新国节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 🇹🇼 台湾节点, 🌍 欧洲节点, 🔯 香港故转, 🔯 日本故转, 🔯 美国故转, 🔯 新国故转, 🔯 韩国故转, 🔯 台湾故转, 🔯 欧洲故转]}
-  - {name: 📲 Telegram, type: select, include-all: true, proxies: [🚀 默认代理, ♻️ 香港自动, ♻️ 日本自动, ♻️ 美国自动, ♻️ 新国自动, ♻️ 韩国自动, ♻️ 台湾自动, ♻️ 欧洲自动, ♻️ 自动选择, ⭐ 香港智能, ⭐ 日本智能, ⭐ 美国智能, ⭐ 新国智能, ⭐ 韩国智能, ⭐ 台湾智能, ⭐ 欧洲智能, 🔒 港区-稳定IP, 🔒 日本-稳定IP, 🔒 美国-稳定IP, 🔒 新国-稳定IP, 🔒 韩国-稳定IP, 🔒 台湾-稳定IP, 🔒 欧洲-稳定IP, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇸🇬 新国节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 🇹🇼 台湾节点, 🌍 欧洲节点, 🔯 香港故转, 🔯 日本故转, 🔯 美国故转, 🔯 新国故转, 🔯 韩国故转, 🔯 台湾故转, 🔯 欧洲故转]}
+  - {name: 🤖 Ai, type: select, include-all: true, proxies: [🚀 默认代理, ♻️ 香港自动, ♻️ 日本自动, ♻️ 美国自动, ♻️ 新国自动, ♻️ 韩国自动, ♻️ 台湾自动, ♻️ 欧洲自动, ♻️ 自动选择, ⭐ 香港智能, ⭐ 日本智能, ⭐ 美国智能, ⭐ 新国智能, ⭐ 韩国智能, ⭐ 台湾智能, ⭐ 欧洲智能, 🔒 港区-稳定IP, 🔒 日本-稳定IP, 🔒 美国-稳定IP, 🔒 新国-稳定IP, 🔒 韩国-稳定IP, 🔒 台湾-稳定IP, 🔒 欧洲-稳定IP, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇸🇬 新国节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 🇹🇼 台湾节点, 🇩🇪🇫🇷🇬🇧 欧洲节点, 🔯 香港故转, 🔯 日本故转, 🔯 美国故转, 🔯 新国故转, 🔯 韩国故转, 🔯 台湾故转, 🔯 欧洲故转, 自建/家宽节点]}
+  - {name: 📲 Telegram, type: select, include-all: true, proxies: [🚀 默认代理, ♻️ 香港自动, ♻️ 日本自动, ♻️ 美国自动, ♻️ 新国自动, ♻️ 韩国自动, ♻️ 台湾自动, ♻️ 欧洲自动, ♻️ 自动选择, ⭐ 香港智能, ⭐ 日本智能, ⭐ 美国智能, ⭐ 新国智能, ⭐ 韩国智能, ⭐ 台湾智能, ⭐ 欧洲智能, 🔒 港区-稳定IP, 🔒 日本-稳定IP, 🔒 美国-稳定IP, 🔒 新国-稳定IP, 🔒 韩国-稳定IP, 🔒 台湾-稳定IP, 🔒 欧洲-稳定IP, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇸🇬 新国节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 🇹🇼 台湾节点, 🇩🇪🇫🇷🇬🇧 欧洲节点, 🔯 香港故转, 🔯 日本故转, 🔯 美国故转, 🔯 新国故转, 🔯 韩国故转, 🔯 台湾故转, 🔯 欧洲故转, 自建/家宽节点]}
   - {name: 📹 YouTube, <<: *pr}
   - {name: 🍀 Google, <<: *pr}
   - {name: 🐦 Twitter(X), <<: *pr}
@@ -176,7 +176,7 @@ proxy-groups:
   - {name: 🎮 Game, <<: *pr}
   - {name: 🍎 Apple, <<: *pr_c}
   - {name: 🎯 直连, <<: *pr_c}
-  - {name: 🐟 漏网之鱼, type: select, include-all: true, proxies: [🚀 默认代理, ♻️ 香港自动, ♻️ 日本自动, ♻️ 美国自动, ♻️ 新国自动, ♻️ 韩国自动, ♻️ 台湾自动, ♻️ 欧洲自动, ♻️ 自动选择, ⭐ 香港智能, ⭐ 日本智能, ⭐ 美国智能, ⭐ 新国智能, ⭐ 韩国智能, ⭐ 台湾智能, ⭐ 欧洲智能, 🔒 港区-稳定IP, 🔒 日本-稳定IP, 🔒 美国-稳定IP, 🔒 新国-稳定IP, 🔒 韩国-稳定IP, 🔒 台湾-稳定IP, 🔒 欧洲-稳定IP, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇸🇬 新国节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 🇹🇼 台湾节点, 🌍 欧洲节点, 🔯 香港故转, 🔯 日本故转, 🔯 美国故转, 🔯 新国故转, 🔯 韩国故转, 🔯 台湾故转, 🔯 欧洲故转]}
+  - {name: 🐟 漏网之鱼, type: select, include-all: true, proxies: [🚀 默认代理, ♻️ 香港自动, ♻️ 日本自动, ♻️ 美国自动, ♻️ 新国自动, ♻️ 韩国自动, ♻️ 台湾自动, ♻️ 欧洲自动, ♻️ 自动选择, ⭐ 香港智能, ⭐ 日本智能, ⭐ 美国智能, ⭐ 新国智能, ⭐ 韩国智能, ⭐ 台湾智能, ⭐ 欧洲智能, 🔒 港区-稳定IP, 🔒 日本-稳定IP, 🔒 美国-稳定IP, 🔒 新国-稳定IP, 🔒 韩国-稳定IP, 🔒 台湾-稳定IP, 🔒 欧洲-稳定IP, 🇭🇰 香港节点, 🇯🇵 日本节点, 🇸🇬 新国节点, 🇺🇲 美国节点, 🇰🇷 韩国节点, 🇹🇼 台湾节点, 🇩🇪🇫🇷🇬🇧 欧洲节点, 🔯 香港故转, 🔯 日本故转, 🔯 美国故转, 🔯 新国故转, 🔯 韩国故转, 🔯 台湾故转, 🔯 欧洲故转, 自建/家宽节点]}
 
   - {name: ♻️ 香港自动, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(港|HK|(?i)Hong))^((?!(台|日|韩|新|深|美|阿联酋|德国|土耳其|英国|俄罗斯|摩尔多瓦)).)*$"}
   - {name: ♻️ 日本自动, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(日|JP|(?i)Japan))^((?!(港|台|韩|新|美)).)*$" }
@@ -201,7 +201,7 @@ proxy-groups:
   - {name: 🔒 新国-稳定IP, type: fallback, tolerance: 30, interval: 150, lazy: false, proxies: [🇸🇬 新国节点, ⭐ 新国智能]}
   - {name: 🔒 韩国-稳定IP, type: fallback, tolerance: 30, interval: 150, lazy: false, proxies: [🇰🇷 韩国节点, ⭐ 韩国智能]}
   - {name: 🔒 台湾-稳定IP, type: fallback, tolerance: 30, interval: 150, lazy: false, proxies: [🇹🇼 台湾节点, ⭐ 台湾智能]}
-  - {name: 🔒 欧洲-稳定IP, type: fallback, tolerance: 30, interval: 150, lazy: false, proxies: [🌍 欧洲节点, ⭐ 欧洲智能]}
+  - {name: 🔒 欧洲-稳定IP, type: fallback, tolerance: 30, interval: 150, lazy: false, proxies: [🇩🇪🇫🇷🇬🇧 欧洲节点, ⭐ 欧洲智能]}
 
 # 手选策略组选择最快的节点 ，配合稳定IP策略组使用。
   - {name: 🇭🇰 香港节点, type: select, include-all: true, filter: "(?=.*(港|HK|(?i)Hong))^((?!(台|日|韩|新|深|美|阿联酋|德国|土耳其|英国|俄罗斯|摩尔多瓦)).)*$"}
@@ -210,7 +210,7 @@ proxy-groups:
   - {name: 🇸🇬 新国节点, type: select, include-all: true, filter: "(?=.*(广新|新加坡|SG|坡|狮城|🇸🇬|Singapore)).*$"}
   - {name: 🇰🇷 韩国节点, type: select, include-all: true, filter: "(?=.*(广韩|韩国|韓國|KR|首尔|春川|🇰🇷|Korea)).*$"}
   - {name: 🇹🇼 台湾节点, type: select, include-all: true, filter: "(?i)台|tw|taiwan"}
-  - {name: 🌍 欧洲节点, type: select, include-all: true, filter: "(?i)欧|europe|germany|france|netherlands|spain|italy|austria|belgium|bulgaria|croatia|cyprus|czech|denmark|estonia|finland|greece|hungary|ireland|latvia|lithuania|luxembourg|malta|poland|portugal|romania|slovakia|slovenia|sweden|russia|德国|法国|荷兰|西班牙|意大利|奥地利|比利时|保加利亚|克罗地亚|塞浦路斯|捷克|丹麦|爱沙尼亚|芬兰|希腊|匈牙利|爱尔兰|拉脱维亚|立陶宛|卢森堡|马耳他|波兰|葡萄牙|罗马尼亚|斯洛伐克|斯洛文尼亚|瑞典|俄罗斯|ru|🇷🇺"}
+  - {name: 🇩🇪🇫🇷🇬🇧 欧洲节点, type: select, include-all: true, filter: "(?i)欧|europe|germany|france|netherlands|spain|italy|austria|belgium|bulgaria|croatia|cyprus|czech|denmark|estonia|finland|greece|hungary|ireland|latvia|lithuania|luxembourg|malta|poland|portugal|romania|slovakia|slovenia|sweden|russia|德国|法国|荷兰|西班牙|意大利|奥地利|比利时|保加利亚|克罗地亚|塞浦路斯|捷克|丹麦|爱沙尼亚|芬兰|希腊|匈牙利|爱尔兰|拉脱维亚|立陶宛|卢森堡|马耳他|波兰|葡萄牙|罗马尼亚|斯洛伐克|斯洛文尼亚|瑞典|俄罗斯|ru|🇷🇺"}
 
   - {name: 🔯 香港故转, type: fallback, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(港|HK|(?i)Hong))^((?!(台|日|韩|新|深|美|阿联酋|德国|土耳其|英国|俄罗斯|摩尔多瓦)).)*$"}
   - {name: 🔯 日本故转, type: fallback, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(日|JP|(?i)Japan))^((?!(港|台|韩|新|美)).)*$" }
@@ -220,6 +220,7 @@ proxy-groups:
   - {name: 🔯 台湾故转, type: fallback, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(广台|台湾|台灣|TW|Tai Wan|🇹🇼|Taiwan)).*$"}
   - {name: 🔯 欧洲故转, type: fallback, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(欧|Europe|🇪🇺|Germany|France|Netherlands|Spain|Italy|Austria|Belgium|Bulgaria|Croatia|Cyprus|Czech|Denmark|Estonia|Finland|Greece|Hungary|Ireland|Latvia|Lithuania|Luxembourg|Malta|Poland|Portugal|Romania|Slovakia|Slovenia|Sweden|Russia|德国|法国|荷兰|西班牙|意大利|奥地利|比利时|保加利亚|克罗地亚|塞浦路斯|捷克|丹麦|爱沙尼亚|芬兰|希腊|匈牙利|爱尔兰|拉脱维亚|立陶宛|卢森堡|马耳他|波兰|葡萄牙|罗马尼亚|斯洛伐克|斯洛文尼亚|瑞典|俄罗斯|RU|🇷🇺)).*$"}
   - {name: 🌍 其他节点, type: select, include-all: true, filter: "^((?!(直连|拒绝|广港|香港|HK|Hong Kong|🇭🇰|HongKong|广台|台湾|台灣|TW|Tai Wan|🇹🇼|Taiwan|广日|日本|JP|川日|东京|大阪|泉日|埼玉|沪日|深日|🇯🇵|Japan|广新|新加坡|SG|坡|狮城|🇸🇬|Singapore|广韩|韩国|韓國|KR|首尔|春川|🇰🇷|Korea|广美|美|US|纽约|波特兰|达拉斯|俄勒|凤凰城|费利蒙|拉斯|洛杉|圣何塞|圣克拉|西雅|芝加|🇺🇸|United States|欧|Europe|Germany|France|Netherlands|Spain|Italy|Austria|Belgium|Bulgaria|Croatia|Cyprus|Czech|Denmark|Estonia|Finland|Greece|Hungary|Ireland|Latvia|Lithuania|Luxembourg|Malta|Poland|Portugal|Romania|Slovakia|Slovenia|Sweden|Russia|德国|法国|荷兰|西班牙|意大利|奥地利|比利时|保加利亚|克罗地亚|塞浦路斯|捷克|丹麦|爱沙尼亚|芬兰|希腊|匈牙利|爱尔兰|拉脱维亚|立陶宛|卢森堡|马耳他|波兰|葡萄牙|罗马尼亚|斯洛伐克|斯洛文尼亚|瑞典|亚美尼亚|洪都拉斯|俄罗斯|RU|🇷🇺)).)*$"}
+  - {name: 自建/家宽节点, type: select, include-all: true, filter: "(?i)(自建|CF|The_house|private|home)", icon: "https://pub-8feead0908f649a8b94397f152fb9cba.r2.dev/private_node.png"}
   - {name: 🌐 全部节点, type: select, include-all: true}
 
 # 规则匹配
@@ -315,5 +316,4 @@ rule-providers:
   telegram_ip: { <<: *ip, url: "https://github.moeyy.xyz/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geoip/telegram.mrs"}
   netflix_ip: { <<: *ip, url: "https://github.moeyy.xyz/https://raw.githubusercontent.com/MetaCubeX/meta-rules-dat/meta/geo/geoip/netflix.mrs"}
   fakeip_filter_domain: { <<: *domain, url: "https://raw.githubusercontent.com/Lanlan13-14/Rules/refs/heads/main/rules/Domain/fakeip-filter.mrs" }
-
 
